app/assets/stylesheets/kata.scss
#test-spinner
{
   display: none;
  position: absolute;
       top: 250px;
      left: 600px;
   z-index: 1000;
     width: 75px;
    height: 75px;
}

#error
{
  width: 580px;
  height: 280px;
  background: red;
  font-size: 12px;
}

#timed-out
{
  width: 480px;
  height: 120px;
  background: gray;
  font-size: 18px;
}

#review-page { display: none; }

#kata-page
{
  margin: { top: 15px; left: 45px; }

  #test-button
  {
    @include non-code-font();
    @include font-size-large();
    @include right-align(15px);
        margin: { right: 0px; bottom: 2px; right: 4px; }
       padding: { top: 0px; bottom: 2px; left: 9px; right: 9px; }
    text-align: right;
         width: 73px;
  }

  #file-operations
  {
    div { display: block; } // inline-block gives horizontal alignment
    #new, #rename, #delete
    {
      width: 65px;
      @include non-code-font();
      @include rounded-corner(4px);
      text-align: right;
       font-size: 10px;
          margin: { top: 0px; bottom: 2px; right: 4px; }
         padding: { bottom: 1px; top: 1px; left: 9px; right: 9px; }
        position: relative;
             top: -2px;
    }
    #delete { margin-bottom: 10px; }
  }

  #filename-list
  {
    margin: { right: 5px; }

    div[class~='filename'][class~='highlight'] { &:before { content: ">"; } }

    div[class~='filename'][id='radio_stdout'] { margin-top: 20px; }
    div[class~='filename'][id='radio_status'] { margin-bottom: 20px; }

         width: 250px;
        height: 410px;
    overflow-y: auto;
    // up/down hidden scrollbar
    overflow-x: none;
    &::-webkit-scrollbar:vertical { width: 0px; }
  }

  #traffic-lights
  {
        margin: { left: 5px; bottom: 0px; }
         width: 750px;
    overflow-x: auto;
    overflow-y: hidden;
    &::-webkit-scrollbar:horizontal { height: 0px; }

    .diff-traffic-light
    {
      padding: { left: 0px; bottom: 0px; }
      img { width: 22px; height: 22px; }
    }
  }

  .file_content
  {
    overflow-x: auto;
    overflow-y: auto;
    &::-webkit-scrollbar:vertical   {  width: 7px; }
    &::-webkit-scrollbar:horizontal { height: 0px; }
  }
}

input#new-filename, input#rename-filename, input#delete-filename
{
   font-size: 1.15em;
      border: 1px solid lighten($darker-color, 10%);
     padding: { right: 10px; }
       color: $lighter-color;
  background: $darker-color;
  text-align: left;
       width: 200px;
}

#test-overlay
{
    // mimic jQuery modal dialog background
    background: #666666 url(images/ui-bg_diagonals-thick_20_666666_40x40.png) 50% 50% repeat;
       opacity: .50;
        filter: Alpha(Opacity=50);
      z-index: 999;
     position: absolute;
         left: 0;
          top: 0;
        width: 100%;
      height: 100%;
}

//==================================================

#group-landing-page
{
  margin: { top: 40px; }

  #title { font-size: 36px; }

  #kata-id { font-size: 155px; }

  #phonetic-kata-id {
    font-size: 30px;
    padding: { bottom: 10px; }
  }

  button#dashboard
  {
    @include non-code-font();
    @include font-size-larger();
         color: $darker-color;
    text-align: right;
   line-height: 95%;
       padding: { top: 8px; bottom: 8px; left: 15px; right: 15px; }
        margin: { top: 5px; }
  }
}

